public/css/main.css
html, body {
  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'sans-serif';
  font-weight: 400;
  font-size: 16px;
  color: #333;
}

.center-text {
  text-align: center;
}

#camera-control,
.add-video-mixer,
.add-camera,
.add-media,
.position-set-mem  {
  margin-top: 50px;
}

.position-control {
  height: 180px;
}

#dpad {
  height: 180px;
}

.zoom-control {
  margin-top: 20px;
  height: 60px;
}

#zpad {
  height: 60px;
}

[name=settings-button],
[name=up-button],
[name=left-button],
[name=right-button],
[name=down-button],
[name=zoom-tele],
[name=zoom-wide] {
  position: absolute;
  margin: 0;
}

[name=up-button] {
  left: 75px;
}

[name=left-button] {
  left: 15;
  top: 60px;
}

[name=right-button] {
  left: 135px;
  top: 60px;
}

[name=down-button] {
  left: 75px;
  top: 120px;
}

[name=zoom-tele] {
  left: 15px;
}

[name=zoom-wide] {
  left: 136px;
}

button {
  margin: 15px;
  height: 60px;
  width: 60px;
}

[name=settings-button],
.menu-control button,
#position-mem button,
#video-mixer button,
#add-camera button,
#add-media button,
#videoinput-mem button {
  margin: 15px;
  height: 40px;
  width: 40px;
  background-color: #c8c8c8;
}

#videoinput-mem select,
#videoinput-mem input {
  margin-top: 25px;

}

.mem-button {
  width: 100%;
}

.aux-button {
  width: 100%;
  margin-top: 30px;
}

#auxmode,
.memoutput {
  padding-bottom: 30px;
  border-bottom: #646464 1px solid;
}

.row {
}

#camera-selection,
#auxmode,
.memoutput,
.mediaoutput {
  padding-top: 15px;
}

input {
  width: 100%;
}

select[disabled] {
  color: #DCDAD1;
}

#cameraid,
#movecamera {
  width: 100%;
}

#camvideo-container {
  display: inline-block;
  position: relative;
}

#camvideo-start{
  z-index: 3;
}

video {
  width: 100%;
  z-index: 1;
}

.video-overlay {
  position: absolute;
  left: 0px;
  top: 0px;
  margin: 0px;
  padding: 0px 0px;
  font-size: 20px;
  color: #FFF;
  z-index: 2;
  width: 100%;
  //background-color: rgba(0, 0, 0, 0.3);
}

.svg-container {
  position: relative;
  width: 100%;
  height: 100%;

  > svg {
    position: absolute;
    top: 0px;
    left: 0px;
    display: block;
  }
}

#svg-polymaker {
  position: absolute;
  top: 0px;
  left: 0px;
  display: block;
  width: 100%;
  height: 100%;
}

polygon {
  vector-effect: non-scaling-stroke;
  stroke-width: 2;
  stroke-linejoin: round;
  stroke-linecap: round;
  stroke: #ffd42a;
  stroke-opacity: 0.4;
  fill-opacity: 0.2;
  fill: #f2f2f2;
}

polygon:hover {
  fill-opacity: 0.5;
  stroke-opacity: 0.8;
}

.polymaker-poly {
  stroke: #2ad4FF;
  stroke-opacity: 0.8;
  fill-opacity: 0.5;
  fill: #4499f2;
}

@media (max-width: 992px) {
  .hidden-xs {
    display: none;
  }
}

#main-settings {
  position: absolute;
  top: 20px;
  left: 20%;
  width: 60%;
}

.body-under-settings {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: #64646491;
}

.main-settings {
  background-color: white;
  border: #c8c8c8 1px solid;
  box-shadow: 5px 10px #d8d8d8c2;
  border-radius: 10px;
  padding: 20px;
  padding-bottom: 60px;
}

.open-popup {
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
}

.close-popup {
  top: 0;
  right: 0;
  background-color: white;
  transform: rotate(45deg);
}

